--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+ --sidebar-w: 240px;
   color-scheme: light;
   color: #213547;
   background-color: #DFE4E0;
